prevent overflow

--- a/style.css
+++ b/style.css
@@ -105,6 +105,7 @@ body {
     height: 100%; 
     display: flex; 
     flex-direction: column; 
+    overflow: hidden; 
     justify-content: flex-start;
 }
 
